--- a/angular.json
+++ b/angular.json
@@ -18,23 +18,16 @@
 			"prefix": "shell",
 			"architect": {
 				"build": {
-					"builder": "ngx-build-plus:browser",
+					"builder": "@angular-devkit/build-angular:browser",
 					"options": {
 						"outputPath": "dist/shell",
 						"index": "src/index.html",
 						"main": "src/main.ts",
 						"polyfills": "src/polyfills.ts",
 						"tsConfig": "tsconfig.app.json",
-						"assets": [
-							"src/favicon.ico",
-							"src/assets"
-						],
-						"styles": [
-							"src/styles.css"
-						],
-						"scripts": [],
-						"extraWebpackConfig": "webpack.config.js",
-						"commonChunk": false
+						"assets": ["src/favicon.ico", "src/assets"],
+						"styles": ["src/styles.css"],
+						"scripts": []
 					},
 					"configurations": {
 						"production": {
@@ -56,8 +49,7 @@
 									"with": "src/environments/environment.prod.ts"
 								}
 							],
-							"outputHashing": "all",
-							"extraWebpackConfig": "webpack.prod.config.js"
+							"outputHashing": "all"
 						},
 						"development": {
 							"buildOptimizer": false,
@@ -71,11 +63,10 @@
 					"defaultConfiguration": "production"
 				},
 				"serve": {
-					"builder": "ngx-build-plus:dev-server",
+					"builder": "@angular-devkit/build-angular:dev-server",
 					"configurations": {
 						"production": {
-							"browserTarget": "shell:build:production",
-							"extraWebpackConfig": "webpack.prod.config.js"
+							"browserTarget": "shell:build:production"
 						},
 						"development": {
 							"browserTarget": "shell:build:development"
@@ -83,15 +74,13 @@
 					},
 					"defaultConfiguration": "development",
 					"options": {
-						"port": 4200,
-						"extraWebpackConfig": "webpack.config.js"
+						"port": 4200
 					}
 				},
 				"extract-i18n": {
-					"builder": "ngx-build-plus:extract-i18n",
+					"builder": "@angular-devkit/build-angular:extract-i18n",
 					"options": {
-						"browserTarget": "shell:build",
-						"extraWebpackConfig": "webpack.config.js"
+						"browserTarget": "shell:build"
 					}
 				},
 				"test": {
