ng-14 implementation without the loadRemoteModule function

--- a/angular.json
+++ b/angular.json
@@ -18,16 +18,23 @@
 			"prefix": "shell",
 			"architect": {
 				"build": {
-					"builder": "@angular-devkit/build-angular:browser",
+					"builder": "ngx-build-plus:browser",
 					"options": {
 						"outputPath": "dist/shell",
 						"index": "src/index.html",
 						"main": "src/main.ts",
 						"polyfills": "src/polyfills.ts",
 						"tsConfig": "tsconfig.app.json",
-						"assets": ["src/favicon.ico", "src/assets"],
-						"styles": ["src/styles.css"],
-						"scripts": []
+						"assets": [
+							"src/favicon.ico",
+							"src/assets"
+						],
+						"styles": [
+							"src/styles.css"
+						],
+						"scripts": [],
+						"extraWebpackConfig": "webpack.config.js",
+						"commonChunk": false
 					},
 					"configurations": {
 						"production": {
@@ -49,7 +56,8 @@
 									"with": "src/environments/environment.prod.ts"
 								}
 							],
-							"outputHashing": "all"
+							"outputHashing": "all",
+							"extraWebpackConfig": "webpack.prod.config.js"
 						},
 						"development": {
 							"buildOptimizer": false,
@@ -63,10 +71,11 @@
 					"defaultConfiguration": "production"
 				},
 				"serve": {
-					"builder": "@angular-devkit/build-angular:dev-server",
+					"builder": "ngx-build-plus:dev-server",
 					"configurations": {
 						"production": {
-							"browserTarget": "shell:build:production"
+							"browserTarget": "shell:build:production",
+							"extraWebpackConfig": "webpack.prod.config.js"
 						},
 						"development": {
 							"browserTarget": "shell:build:development"
@@ -74,13 +83,16 @@
 					},
 					"defaultConfiguration": "development",
 					"options": {
-						"port": 4200
+						"port": 4200,
+						"publicHost": "http://localhost:4200",
+						"extraWebpackConfig": "webpack.config.js"
 					}
 				},
 				"extract-i18n": {
-					"builder": "@angular-devkit/build-angular:extract-i18n",
+					"builder": "ngx-build-plus:extract-i18n",
 					"options": {
-						"browserTarget": "shell:build"
+						"browserTarget": "shell:build",
+						"extraWebpackConfig": "webpack.config.js"
 					}
 				},
 				"test": {
