--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js"
   },
   "private": true,
   "dependencies": {
+    "@angular-architects/module-federation": "^14.3.8",
     "@angular/animations": "^14.0.2",
     "@angular/common": "^14.0.2",
     "@angular/compiler": "^14.0.2",
@@ -37,6 +39,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "ngx-build-plus": "^14.0.0",
     "tailwindcss": "^3.1.3",
     "typescript": "~4.7.4"
   }
